Wed Jul  7 01:38:03 1999  Jim Wilson  <wilson@cygnus.com>

	* unroll.c (unroll_loop): Don't delete NOTE_INSN_DELETED_LABEL notes.

1999-07-07  Manfred Hollstein  <mhollstein@cygnus.com>

	* m88k/dguxbcs.h (CPP_SPEC): Add missing \ in multi-line
	string literal.

Wed Jul  7 01:16:43 1999  Richard Henderson  <rth@cygnus.com>

	* ginclude/varargs.h (__builtin_va_alist_t): New typedef.
	(va_dcl): Use __builtin_va_alist_t.

Wed Jul  7 01:13:31 1999  Jason Merrill  <jason@yorick.cygnus.com>

	* dwarf2out.c (gen_struct_or_union_type_die): Only remember types
	on the permanent_obstack.
	* dwarfout.c (output_type): Likewise.

Fri Jul  2 03:05:13 1999  Jeffrey A Law  (law@cygnus.com)

	* dwarfout.c (field_byte_offset): Correctly compute the object's
	byte offset for the first bit of a field which crosses an alignment
	boundary on a !BYTES_BIG_ENDIAN target.

Fri Jul  2 01:36:36 1999  Robert Lipe  <robertlipe@usa.net>

	* fixinc.svr4: Fix <arpa/inet.h> by deleting protos for htons and
	ntohs.

Fri Jul  2 00:46:47 1999  Richard Henderson  <rth@cygnus.com>
			  Jeff Law <law@cygnus.com>

	* ginclude/varargs.h (va_dcl): Use word_mode for type of
	__builtin_va_list.

	* except.c: Include intl.h.
	(expand_eh_return): Set current_function_cannot_inline.
	(save_eh_status, restore_eh_status): Twiddle eh_return_stub_label.
	* function.h (struct function): Add eh_return_stub_label.
	* flow.c (delete_unreachable_blocks): Don't merge across EH edges.
	* Makefile.in (except.o): Depend on intl.h.

Fri Jul  2 00:04:23 1999  David Edelsohn  <edelsohn@gnu.org>

	* rs6000.md (movdf_hardfloat32): Handle PRE_INC and PRE_DEC the
	same as offsettable in cases 1 and 2.

1999-07-01  Mark Kettenis  <kettenis@gnu.org>

	* config/i386/gnu.h (CPP_SPEC): Define __PIC__ and __pic__ if
	-fPIC or -fpic is specified.

Wed Jun 30 23:56:01 1999  Jeffrey A Law  (law@cygnus.com)

	* expr.c (emit_block_move): Use copy_to_mode_reg for
	!TARGET_MEM_FUNCTIONS case too.
